--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
+    "@angular/animations": "^8.2.3",
+    "@angular/cdk": "^8.1.4",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
+    "@angular/material": "^8.1.4",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@sentry/browser": "^5.6.2",
     "jscharting": "^2.8.0-1",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.4.0",
